# evm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.depot  Dockerfile.reproducible  LLM.md  Makefile  README.md  book.toml  deny.toml  docker-bake.hcl  typos.toml
.changelog/: config.toml  cute-bears-paint.md  gentle-moons-cry.md  quiet-foxes-dance.md  zesty-birds-smile.md
.config/: nextest.toml  zepter.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/assets/: kurtosis_network_params.yaml
.github/scripts/: check_rv32imac.sh  check_wasm.sh
.github/workflows/: bench.yml  check-alloy.yml  compact.yml  docker-tag-latest.yml  docker.yml  e2e.yml  hive.yml  integration.yml  kurtosis.yml  lint.yml  prepare-evm.yml  release-dist.yml  release-reproducible.yml  release.yml  reproducible-build.yml  stage.yml  sync-era.yml  sync.yml
crates/chain-state/: Cargo.toml
crates/chainspec/: Cargo.toml
crates/chainspec/src/: api.rs  lib.rs  spec.rs
crates/cli/cli/: Cargo.toml
crates/cli/cli/src/: lib.rs
crates/cli/commands/: Cargo.toml
crates/cli/commands/src/: common.rs  config_cmd.rs  download.rs  dump_genesis.rs  export_era.rs  import.rs  import_core.rs  import_era.rs  init_cmd.rs  launcher.rs  lib.rs  node.rs  prune.rs  re_execute.rs
crates/cli/commands/src/db/: account_storage.rs  clear.rs  diff.rs  get.rs  list.rs  mod.rs  repair_trie.rs  settings.rs  state.rs  static_file_header.rs  stats.rs  tui.rs
crates/cli/commands/src/db/checksum/: mod.rs  rocksdb.rs
crates/cli/commands/src/init_state/: mod.rs  without_evm.rs
crates/cli/commands/src/p2p/: bootnode.rs  enode.rs  mod.rs  rlpx.rs
crates/cli/commands/src/stage/: drop.rs  mod.rs  run.rs  unwind.rs
crates/cli/commands/src/stage/dump/: execution.rs  hashing_account.rs  hashing_storage.rs  merkle.rs  mod.rs
crates/cli/commands/src/test_vectors/: compact.rs  mod.rs  tables.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/consensus/common/: Cargo.toml
crates/consensus/common/src/: lib.rs  validation.rs
crates/consensus/consensus/: Cargo.toml
crates/consensus/consensus/src/: lib.rs  noop.rs  test_utils.rs
crates/e2e-test-utils/: Cargo.toml
crates/e2e-test-utils/src/: lib.rs  network.rs  node.rs  payload.rs  rpc.rs  setup_builder.rs  setup_import.rs  test_rlp_utils.rs
crates/e2e-test-utils/src/testsuite/: README.md  mod.rs  setup.rs
crates/e2e-test-utils/src/testsuite/actions/: custom_fcu.rs  engine_api.rs  fork.rs  mod.rs  node_ops.rs  produce_blocks.rs  reorg.rs
crates/e2e-test-utils/tests/e2e-testsuite/: main.rs
crates/e2e-test-utils/tests/rocksdb/: main.rs
crates/engine/invalid-block-hooks/: Cargo.toml
crates/engine/invalid-block-hooks/src/: witness.rs
crates/engine/local/: Cargo.toml
crates/engine/local/src/: lib.rs  miner.rs  payload.rs
crates/era/: Cargo.toml
crates/era-downloader/: Cargo.toml
crates/era-downloader/src/: client.rs  fs.rs  lib.rs  stream.rs
crates/era-downloader/tests/it/: checksums.rs  download.rs  fs.rs  list.rs  main.rs  stream.rs
crates/era-utils/: Cargo.toml
crates/era-utils/src/: export.rs  history.rs  lib.rs
crates/era-utils/tests/it/: genesis.rs  history.rs  main.rs
crates/errors/: Cargo.toml
crates/errors/src/: error.rs  lib.rs
crates/etl/: Cargo.toml
crates/etl/src/: lib.rs
crates/fs-util/: Cargo.toml
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/: Cargo.toml
crates/primitives/benches/: recover_ecdsa_crit.rs
crates/primitives/src/: block.rs  lib.rs  receipt.rs
crates/primitives/src/transaction/: mod.rs  signature.rs  tx_type.rs  util.rs
crates/revm/: Cargo.toml
crates/revm/src/: cached.rs  database.rs  lib.rs  test_utils.rs  witness.rs
crates/stateless/: Cargo.toml
crates/stateless/src/: lib.rs  recover_block.rs  trie.rs  validation.rs  witness_db.rs
crates/tasks/: Cargo.toml
crates/tokio-util/: Cargo.toml
crates/tracing/: Cargo.toml
crates/tracing-otlp/: Cargo.toml
crates/tracing/src/: layers.rs  lib.rs  throttle.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/benches/: canonical_state_change.rs  insertion.rs  priority.rs  reorder.rs  truncate.rs
crates/transaction-pool/src/: config.rs  error.rs  lib.rs  maintain.rs  metrics.rs  noop.rs  traits.rs
crates/transaction-pool/src/blobstore/: tracker.rs
crates/transaction-pool/src/pool/: best.rs  blob.rs  mod.rs  parked.rs  pending.rs  txpool.rs
crates/transaction-pool/src/test_utils/: mock.rs  okvalidator.rs  tx_gen.rs
crates/transaction-pool/src/validate/: eth.rs  mod.rs  task.rs
crates/transaction-pool/tests/it/: best.rs  blobs.rs  evict.rs  listeners.rs  pending.rs
docs/: README.md  release.md  workflow.md
docs/cli/: help.rs
docs/crates/: db.md  (+3 more)
etc/: docker-compose.yml  lighthouse.yml
examples/: README.md
examples/bsc-p2p/: Cargo.toml
examples/bsc-p2p/src/: chainspec.rs  handshake.rs  main.rs
examples/bsc-p2p/src/block_import/: handle.rs  mod.rs  parlia.rs  service.rs
examples/bsc-p2p/tests/it/: p2p.rs
examples/custom-engine-types/: Cargo.toml
examples/custom-engine-types/src/: main.rs
examples/custom-evm/: Cargo.toml
examples/custom-evm/src/: main.rs
examples/custom-payload-builder/: Cargo.toml
examples/custom-payload-builder/src/: generator.rs  job.rs  main.rs
examples/exex-test/: Cargo.toml
examples/exex-test/src/: main.rs  wal_test.rs
examples/manual-p2p/: Cargo.toml
examples/manual-p2p/src/: main.rs
examples/network-proxy/: Cargo.toml
examples/network-proxy/src/: main.rs
examples/polygon-p2p/: Cargo.toml
examples/polygon-p2p/src/: chain_cfg.rs  main.rs
examples/rpc-db/: Cargo.toml
examples/rpc-db/src/: main.rs  myrpc_ext.rs
scripts/: rebrand.sh
testing/ef-tests/: Cargo.toml
testing/ef-tests/src/: lib.rs  models.rs  result.rs
testing/ef-tests/src/cases/: blockchain_test.rs
testing/ef-tests/tests/: tests.rs
testing/testing-utils/: Cargo.toml
testing/testing-utils/src/: generators.rs  genesis_allocator.rs  lib.rs
(+952 files in other folders)
