[package]
name = "hanzo-evm-chainspec"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-ethereum-forks.workspace = true
hanzo-evm-network-peers.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
hanzo-evm-primitives-traits.workspace = true

# ethereum
alloy-evm.workspace = true
alloy-chains = { workspace = true, features = ["serde", "rlp"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-consensus.workspace = true

# misc
auto_impl.workspace = true
serde_json.workspace = true
derive_more.workspace = true

[dev-dependencies]
# eth
alloy-trie = { workspace = true, features = ["arbitrary"] }
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }

[features]
default = ["std"]
std = [
    "alloy-chains/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "alloy-trie/std",
    "hanzo-evm-primitives-traits/std",
    "alloy-consensus/std",
    "alloy-rlp/std",
    "hanzo-evm-ethereum-forks/std",
    "derive_more/std",
    "hanzo-evm-network-peers/std",
    "serde_json/std",
    "alloy-evm/std",
]
arbitrary = [
    "alloy-chains/arbitrary",
    "hanzo-evm-ethereum-forks/arbitrary",
    "hanzo-evm-primitives-traits/arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/arbitrary",
    "alloy-trie/arbitrary",
]
test-utils = [
    "hanzo-evm-primitives-traits/test-utils",
]
