[package]
name = "hanzo-evm-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-network-types.workspace = true
hanzo-evm-prune-types.workspace = true
hanzo-evm-stages-types.workspace = true
hanzo-evm-static-file-types.workspace = true

# serde
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }

# toml
toml = { workspace = true, optional = true }
eyre.workspace = true

# value objects
url.workspace = true

[features]
serde = [
    "dep:serde",
    "dep:toml",
    "dep:humantime-serde",
    "hanzo-evm-network-types/serde",
    "hanzo-evm-prune-types/serde",
    "hanzo-evm-stages-types/serde",
    "alloy-primitives/serde",
    "url/serde",
]

[dev-dependencies]
tempfile.workspace = true
hanzo-evm-network-peers.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom"] }
