[package]
name = "hanzo-evm-e2e-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hanzo-evm-chainspec.workspace = true
hanzo-evm-tracing.workspace = true
hanzo-evm-db = { workspace = true, features = ["test-utils"] }
hanzo-evm-network-api.workspace = true
hanzo-evm-network-p2p.workspace = true
hanzo-evm-rpc-server-types.workspace = true
hanzo-evm-rpc-builder.workspace = true
hanzo-evm-rpc-eth-api.workspace = true
hanzo-evm-rpc-api = { workspace = true, features = ["client"] }
hanzo-evm-payload-builder = { workspace = true, features = ["test-utils"] }
hanzo-evm-payload-builder-primitives.workspace = true
hanzo-evm-payload-primitives.workspace = true
hanzo-evm-provider.workspace = true
hanzo-evm-node-api.workspace = true
hanzo-evm-node-core.workspace = true
hanzo-evm-node-builder = { workspace = true, features = ["test-utils"] }
hanzo-evm-tokio-util.workspace = true
hanzo-evm-stages-types.workspace = true
hanzo-evm-network-peers.workspace = true
hanzo-evm-engine-local.workspace = true
hanzo-evm-engine-primitives.workspace = true
hanzo-evm-tasks.workspace = true
hanzo-evm-node-ethereum.workspace = true
hanzo-evm-ethereum-primitives.workspace = true
hanzo-evm-cli-commands.workspace = true
hanzo-evm-config.workspace = true
hanzo-evm-consensus.workspace = true
hanzo-evm-primitives.workspace = true
hanzo-evm-db-common.workspace = true
hanzo-evm-primitives-traits.workspace = true

revm.workspace = true
tempfile.workspace = true

# rpc
jsonrpsee.workspace = true
url.workspace = true

# ethereum
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-network.workspace = true
alloy-consensus = { workspace = true, features = ["kzg"] }
alloy-provider = { workspace = true, features = ["reqwest"] }

futures-util.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde_json.workspace = true
tracing.workspace = true
derive_more.workspace = true

[[test]]
name = "e2e_testsuite"
path = "tests/e2e-testsuite/main.rs"

[[test]]
name = "rocksdb"
path = "tests/rocksdb/main.rs"
required-features = ["rocksdb"]

[features]
rocksdb = ["hanzo-evm-node-core/rocksdb", "hanzo-evm-provider/rocksdb", "hanzo-evm-cli-commands/rocksdb"]
edge = ["rocksdb"]
