[package]
name = "hanzo-evm-era-utils"
description = "Utilities to store and fetch history data with storage-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# evm
hanzo-evm-db-api.workspace = true
hanzo-evm-era.workspace = true
hanzo-evm-era-downloader.workspace = true
hanzo-evm-etl.workspace = true
hanzo-evm-fs-util.workspace = true
hanzo-evm-provider.workspace = true
hanzo-evm-stages-types.workspace = true
hanzo-evm-storage-api.workspace = true
hanzo-evm-primitives-traits.workspace = true

# async
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
futures-util.workspace = true

# errors
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
# evm
hanzo-evm-provider.workspace = true
hanzo-evm-provider.features = ["test-utils"]
hanzo-evm-db-common.workspace = true

# async
tokio-util.workspace = true
bytes.workspace = true

# http
reqwest.workspace = true

# file system
tempfile.workspace = true

[lints]
workspace = true
