[package]
name = "hanzo-evm-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hanzo-evm-consensus.workspace = true
hanzo-evm-execution-errors.workspace = true
hanzo-evm-storage-errors.workspace = true

# misc
thiserror.workspace = true
