[package]
name = "hanzo-evm-primitives"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Commonly used types in Hanzo EVM."

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-ethereum-primitives = { workspace = true, features = ["serde"] }
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-ethereum-forks.workspace = true
hanzo-evm-static-file-types.workspace = true

# ethereum
alloy-consensus.workspace = true

# for eip-4844
c-kzg = { workspace = true, features = ["serde"], optional = true }

# misc
once_cell.workspace = true

[dev-dependencies]
# eth
hanzo-evm-primitives-traits = { workspace = true, features = ["arbitrary", "test-utils"] }

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-genesis.workspace = true

arbitrary = { workspace = true, features = ["derive"] }

proptest-arbitrary-interop.workspace = true
proptest.workspace = true
hanzo-evm-codecs.workspace = true

criterion.workspace = true

[features]
default = ["c-kzg", "alloy-compat", "std", "hanzo-evm-codec", "secp256k1"]
std = [
    "hanzo-evm-primitives-traits/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "once_cell/std",
    "hanzo-evm-ethereum-forks/std",
    "hanzo-evm-ethereum-primitives/std",
    "alloy-rlp/std",
    "alloy-primitives/std",
    "hanzo-evm-static-file-types/std",
]
hanzo-evm-codec = [
    "std",
    "hanzo-evm-primitives-traits/hanzo-evm-codec",
    "hanzo-evm-ethereum-primitives/hanzo-evm-codec",
]
asm-keccak = [
    "alloy-primitives/asm-keccak",
]
arbitrary = [
    "alloy-eips/arbitrary",
    "hanzo-evm-codec",
    "hanzo-evm-ethereum-forks/arbitrary",
    "hanzo-evm-primitives-traits/arbitrary",
    "alloy-consensus/arbitrary",
    "hanzo-evm-ethereum-primitives/arbitrary",
    "hanzo-evm-codecs/arbitrary",
    "alloy-primitives/arbitrary",
    "c-kzg?/arbitrary",
]
secp256k1 = [
    "hanzo-evm-primitives-traits/secp256k1",
]
c-kzg = [
    "dep:c-kzg",
    "alloy-consensus/kzg",
    "alloy-eips/kzg",
]
alloy-compat = []
test-utils = [
    "hanzo-evm-primitives-traits/test-utils",
    "arbitrary",
    "hanzo-evm-codecs/test-utils",
    "hanzo-evm-ethereum-primitives/test-utils",
]
serde-bincode-compat = [
    "alloy-eips/serde-bincode-compat",
    "alloy-consensus/serde-bincode-compat",
    "hanzo-evm-primitives-traits/serde-bincode-compat",
    "hanzo-evm-ethereum-primitives/serde-bincode-compat",
    "alloy-genesis/serde-bincode-compat",
]

[[bench]]
name = "recover_ecdsa_crit"
harness = false

[[bench]]
name = "validate_blob_tx"
required-features = ["arbitrary", "c-kzg"]
harness = false
