[package]
name = "hanzo-evm-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Hanzo EVM specific revm utilities"

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-storage-errors.workspace = true
hanzo-evm-storage-api.workspace = true
hanzo-evm-trie = { workspace = true, optional = true }

# alloy
alloy-primitives.workspace = true

# revm
revm.workspace = true

[dev-dependencies]
hanzo-evm-trie.workspace = true
hanzo-evm-ethereum-forks.workspace = true
alloy-consensus.workspace = true

[features]
default = ["std"]
std = [
    "hanzo-evm-primitives-traits/std",
    "alloy-primitives/std",
    "revm/std",
    "alloy-consensus/std",
    "hanzo-evm-ethereum-forks/std",
    "hanzo-evm-storage-api/std",
    "hanzo-evm-storage-errors/std",
]
witness = ["dep:hanzo-evm-trie"]
test-utils = [
    "dep:hanzo-evm-trie",
    "hanzo-evm-primitives-traits/test-utils",
    "hanzo-evm-trie?/test-utils",
]
serde = [
    "revm/serde",
    "alloy-primitives/serde",
    "alloy-consensus/serde",
    "hanzo-evm-trie?/serde",
    "hanzo-evm-ethereum-forks/serde",
    "hanzo-evm-primitives-traits/serde",
    "hanzo-evm-storage-api/serde",
]
portable = ["revm/portable"]
optional-balance-check = ["revm/optional_balance_check"]
optional-block-gas-limit = ["revm/optional_block_gas_limit"]
optional-eip3541 = ["revm/optional_eip3541"]
optional-eip3607 = ["revm/optional_eip3607"]
optional-no-base-fee = ["revm/optional_no_base_fee"]
optional-checks = [
    "optional-balance-check",
    "optional-block-gas-limit",
    "optional-eip3541",
    "optional-eip3607",
    "optional-no-base-fee",
]
memory_limit = ["revm/memory_limit"]
