[package]
name = "hanzo-evm-stateless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-genesis = { workspace = true, features = ["serde-bincode-compat"] }

# evm
hanzo-evm-ethereum-consensus.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-ethereum-primitives = { workspace = true, features = ["serde", "serde-bincode-compat"] }
hanzo-evm-errors.workspace = true
hanzo-evm-execution.workspace = true
hanzo-evm-revm.workspace = true
hanzo-evm-trie-common.workspace = true
hanzo-evm-trie-sparse.workspace = true
hanzo-evm-chainspec.workspace = true
hanzo-evm-consensus.workspace = true

# misc
thiserror.workspace = true
itertools.workspace = true
serde.workspace = true
serde_with.workspace = true
