[package]
name = "hanzo-evm-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "tracing helpers"

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-tracing-otlp = { workspace = true, optional = true }

# obs
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender.workspace = true
tracing-journald.workspace = true
tracing-logfmt.workspace = true
tracing-samply.workspace = true
tracing-tracy = { workspace = true, optional = true }
tracy-client = { workspace = true, optional = true }

# misc
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
rolling-file.workspace = true

[features]
default = ["otlp"]
otlp = ["hanzo-evm-tracing-otlp"]
otlp-logs = ["hanzo-evm-tracing-otlp/otlp-logs"]
tracy = ["tracing-tracy", "tracy-client"]
