[package]
name = "hanzo-evm-transaction-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Transaction pool implementation"

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-chain-state.workspace = true
hanzo-evm-ethereum-primitives.workspace = true
hanzo-evm-chainspec.workspace = true
hanzo-evm-eth-wire-types.workspace = true
hanzo-evm-execution.workspace = true
hanzo-evm-eth-execution.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-execution-types.workspace = true
hanzo-evm-fs-util.workspace = true
hanzo-evm-storage-api.workspace = true
hanzo-evm-tasks.workspace = true
revm.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true

# ethereum
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-consensus = { workspace = true, features = ["kzg"] }

# async/futures
futures-util.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true

# metrics
hanzo-evm-metrics.workspace = true
metrics.workspace = true

# misc
aquamarine.workspace = true
thiserror.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
schnellru.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
bitflags.workspace = true
auto_impl.workspace = true
smallvec.workspace = true

# testing
rand = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }

[dev-dependencies]
hanzo-evm-provider = { workspace = true, features = ["test-utils"] }
hanzo-evm-tracing.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
paste.workspace = true
rand.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
criterion.workspace = true
assert_matches.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures.workspace = true

[features]
serde = [
    "hanzo-evm-execution-types/serde",
    "hanzo-evm-eth-wire-types/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "bitflags/serde",
    "parking_lot/serde",
    "rand?/serde",
    "smallvec/serde",
    "revm-interpreter/serde",
    "revm-primitives/serde",
    "hanzo-evm-primitives-traits/serde",
    "hanzo-evm-ethereum-primitives/serde",
    "hanzo-evm-chain-state/serde",
    "hanzo-evm-storage-api/serde",
    "revm/serde",
]
test-utils = [
    "rand",
    "paste",
    "serde",
    "hanzo-evm-chain-state/test-utils",
    "hanzo-evm-chainspec/test-utils",
    "hanzo-evm-provider/test-utils",
    "hanzo-evm-primitives-traits/test-utils",
    "hanzo-evm-ethereum-primitives/test-utils",
    "alloy-primitives/rand",
    "reth-evm/test-utils",
    "reth-evm-ethereum/test-utils",
    "reth-tasks/test-utils",
]
arbitrary = [
    "proptest",
    "proptest-arbitrary-interop",
    "hanzo-evm-chainspec/arbitrary",
    "hanzo-evm-eth-wire-types/arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/arbitrary",
    "bitflags/arbitrary",
    "hanzo-evm-primitives-traits/arbitrary",
    "smallvec/arbitrary",
    "revm-interpreter/arbitrary",
    "hanzo-evm-ethereum-primitives/arbitrary",
    "revm-primitives/arbitrary",
    "revm/arbitrary",
]

[[bench]]
name = "truncate"
required-features = ["test-utils", "arbitrary"]
harness = false

[[bench]]
name = "reorder"
required-features = ["test-utils", "arbitrary"]
harness = false

[[bench]]
name = "priority"
required-features = ["arbitrary"]
harness = false

[[bench]]
name = "insertion"
required-features = ["test-utils", "arbitrary"]
harness = false

[[bench]]
name = "canonical_state_change"
required-features = ["test-utils", "arbitrary"]
harness = false
