[package]
name = "example-bsc-p2p"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
# evm
hanzo-evm-chainspec.workspace = true
hanzo-evm-discv4 = { workspace = true, features = ["test-utils"] }
hanzo-evm-engine-primitives.workspace = true
hanzo-evm-ethereum-forks = { workspace = true, features = ["serde"] }
hanzo-evm-eth-wire.workspace = true
hanzo-evm-eth-wire-types.workspace = true
hanzo-evm-network = { workspace = true, features = ["test-utils"] }
hanzo-evm-network-api.workspace = true
hanzo-evm-network-peers.workspace = true
hanzo-evm-payload-primitives.workspace = true
hanzo-evm-primitives.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-provider = { workspace = true, features = ["test-utils"] }
hanzo-evm-tracing.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }

# misc
bytes.workspace = true
futures.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
hanzo-evm-node-ethereum.workspace = true

[features]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "hanzo-evm-eth-wire/serde",
    "hanzo-evm-eth-wire-types/serde",
    "hanzo-evm-ethereum-forks/serde",
    "hanzo-evm-primitives-traits/serde",
    "secp256k1/serde",
    "bytes/serde",
    "hanzo-evm-network/serde",
    "hanzo-evm-network-api/serde",
]
