[package]
name = "example-custom-engine-types"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
hanzo-evm-payload-builder.workspace = true
hanzo-evm-basic-payload-builder.workspace = true
hanzo-evm-ethereum-payload-builder.workspace = true
hanzo-evm-ethereum = { workspace = true, features = ["test-utils", "node", "node-api", "pool"] }
hanzo-evm-tracing.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-primitives.workspace = true
alloy-eips.workspace = true

eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
