[package]
name = "example-custom-evm"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
hanzo-evm-ethereum = { workspace = true, features = ["test-utils", "node", "evm", "pool"] }
hanzo-evm-tracing.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
tokio.workspace = true
