[package]
name = "example-custom-payload-builder"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
hanzo-evm-basic-payload-builder.workspace = true
hanzo-evm-payload-builder.workspace = true
hanzo-evm-ethereum = { workspace = true, features = ["node", "pool", "cli"] }
hanzo-evm-ethereum-payload-builder.workspace = true

alloy-eips.workspace = true

tracing.workspace = true
futures-util.workspace = true
eyre.workspace = true
