[package]
name = "example-exex-test"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
# evm
hanzo-evm-ethereum = { workspace = true, features = ["full", "node"] }
hanzo-evm-e2e-test-utils.workspace = true

# async utilities
futures-util.workspace = true
tokio = { workspace = true, features = ["full"] }

# other dependencies
eyre.workspace = true
serde_json.workspace = true
