[package]
name = "example-manual-p2p"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
hanzo-evm-discv4.workspace = true
hanzo-evm-ethereum = { workspace = true, features = ["network"] }
hanzo-evm-ecies.workspace = true
hanzo-evm-network-peers.workspace = true

alloy-consensus.workspace = true

secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }

futures.workspace = true
tokio.workspace = true

eyre.workspace = true
