[package]
name = "example-network-proxy"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
hanzo-evm-ethereum = { workspace = true, features = ["network"] }
hanzo-evm-tracing.workspace = true
futures.workspace = true
tokio.workspace = true
eyre.workspace = true
