[package]
name = "example-polygon-p2p"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }
tokio.workspace = true
hanzo-evm-ethereum = { workspace = true, features = ["network"] }
serde_json.workspace = true
hanzo-evm-tracing.workspace = true
tokio-stream.workspace = true
hanzo-evm-discv4 = { workspace = true, features = ["test-utils"] }
alloy-genesis.workspace = true
