[package]
name = "example-rpc-db"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
jsonrpsee.workspace = true
hanzo-evm-ethereum = { workspace = true, features = ["test-utils", "node", "provider", "pool", "network", "rpc"] }
tokio = { workspace = true, features = ["full"] }
eyre.workspace = true
