[package]
name = "ef-tests"
version.workspace = true
description = "EF testing support for Hanzo EVM."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
ef-tests = []
asm-keccak = ["alloy-primitives/asm-keccak", "revm/asm-keccak"]

[dependencies]
hanzo-evm-chainspec.workspace = true
hanzo-evm-ethereum-primitives.workspace = true
hanzo-evm-primitives-traits = { workspace = true, features = ["rayon"] }
hanzo-evm-consensus.workspace = true
hanzo-evm-db = { workspace = true, features = ["mdbx", "test-utils", "disable-lock"] }
hanzo-evm-db-api.workspace = true
hanzo-evm-db-common.workspace = true
hanzo-evm-provider = { workspace = true, features = ["test-utils"] }
hanzo-evm-execution.workspace = true
hanzo-evm-eth-execution.workspace = true
hanzo-evm-ethereum-consensus.workspace = true
hanzo-evm-revm = { workspace = true, features = ["std", "witness"] }
hanzo-evm-stateless = { workspace = true }
hanzo-evm-tracing.workspace = true
hanzo-evm-trie.workspace = true
hanzo-evm-trie-db.workspace = true
revm = { workspace = true, features = ["secp256k1", "blst", "c-kzg", "memory_limit"] }

alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true

walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
