[package]
name = "hanzo-evm-testing-utils"
description = "Testing utils for Hanzo EVM."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hanzo-evm-ethereum-primitives = { workspace = true, features = ["arbitrary", "std"] }
hanzo-evm-primitives-traits = { workspace = true, features = ["secp256k1", "arbitrary"] }
alloy-genesis.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-consensus.workspace = true
alloy-eips.workspace = true

rand.workspace = true
secp256k1 = { workspace = true, features = ["rand"] }
rand_08.workspace = true

[dev-dependencies]
alloy-rlp.workspace = true
