[package]
name = "hanzo-evm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-cli-runner.workspace = true
hanzo-evm-db.workspace = true
alloy-genesis.workspace = true

# misc
clap.workspace = true
shellexpand.workspace = true
eyre.workspace = true
serde_json.workspace = true
