[package]
name = "hanzo-evm-cli-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]

[dependencies]
# evm
hanzo-evm-chainspec.workspace = true
hanzo-evm-cli.workspace = true
hanzo-evm-cli-runner.workspace = true
hanzo-evm-cli-util.workspace = true
hanzo-evm-codecs.workspace = true
hanzo-evm-config = { workspace = true, features = ["serde"] }
hanzo-evm-consensus.workspace = true
hanzo-evm-db = { workspace = true, features = ["mdbx"] }
hanzo-evm-db-api.workspace = true
hanzo-evm-db-common.workspace = true
hanzo-evm-downloaders = { workspace = true, features = ["file-client"] }
hanzo-evm-ecies.workspace = true
hanzo-evm-eth-wire.workspace = true
hanzo-evm-era.workspace = true
hanzo-evm-era-downloader.workspace = true
hanzo-evm-era-utils.workspace = true
hanzo-evm-etl.workspace = true
hanzo-evm-execution.workspace = true
hanzo-evm-exex.workspace = true
hanzo-evm-fs-util.workspace = true
hanzo-evm-net-nat.workspace = true
hanzo-evm-network = { workspace = true, features = ["serde"] }
hanzo-evm-network-p2p.workspace = true
hanzo-evm-network-peers = { workspace = true, features = ["secp256k1"] }
hanzo-evm-node-api.workspace = true
hanzo-evm-node-builder.workspace = true
hanzo-evm-node-core.workspace = true
hanzo-evm-node-events.workspace = true
hanzo-evm-node-metrics.workspace = true
hanzo-evm-ethereum-primitives = { workspace = true, optional = true }
hanzo-evm-provider.workspace = true
hanzo-evm-prune.workspace = true
hanzo-evm-prune-types = { workspace = true, optional = true }
hanzo-evm-revm.workspace = true
hanzo-evm-stages.workspace = true
hanzo-evm-stages-types = { workspace = true, optional = true }
hanzo-evm-static-file-types = { workspace = true, features = ["clap"] }
hanzo-evm-static-file.workspace = true
hanzo-evm-tasks.workspace = true
hanzo-evm-storage-api.workspace = true
hanzo-evm-trie = { workspace = true, features = ["metrics"] }
hanzo-evm-trie-db = { workspace = true, features = ["metrics"] }
hanzo-evm-trie-common.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-discv4.workspace = true
hanzo-evm-discv5.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-chains.workspace = true

itertools.workspace = true
futures.workspace = true
tokio.workspace = true

# misc
humantime.workspace = true
human_bytes.workspace = true
eyre.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
lz4.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tar.workspace = true
tracing.workspace = true
backon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }
tokio-stream.workspace = true
reqwest.workspace = true
url.workspace = true
metrics.workspace = true

# io
fdlimit.workspace = true
toml = { workspace = true, features = ["display"] }

# tui
comfy-table.workspace = true
crossterm.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }

# evm test-vectors
proptest = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }

[dev-dependencies]
hanzo-evm-ethereum-cli.workspace = true
hanzo-evm-provider = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true

[features]
default = []
arbitrary = [
    "dep:proptest",
    "dep:arbitrary",
    "dep:proptest-arbitrary-interop",
    "hanzo-evm-db-api/arbitrary",
    "hanzo-evm-eth-wire/arbitrary",
    "hanzo-evm-db/arbitrary",
    "hanzo-evm-chainspec/arbitrary",
    "alloy-chains/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/arbitrary",
    "hanzo-evm-codecs/test-utils",
    "hanzo-evm-prune-types/test-utils",
    "hanzo-evm-stages-types/test-utils",
    "hanzo-evm-trie-common/test-utils",
    "hanzo-evm-codecs/arbitrary",
    "hanzo-evm-prune-types?/arbitrary",
    "hanzo-evm-stages-types?/arbitrary",
    "hanzo-evm-trie-common/arbitrary",
    "alloy-consensus/arbitrary",
    "hanzo-evm-primitives-traits/arbitrary",
    "hanzo-evm-ethereum-primitives/arbitrary",
]

rocksdb = ["hanzo-evm-db-common/rocksdb", "hanzo-evm-stages/rocksdb", "hanzo-evm-provider/rocksdb", "hanzo-evm-prune/rocksdb"]
edge = ["rocksdb"]
