[package]
name = "hanzo-evm-consensus-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-chainspec.workspace = true
hanzo-evm-consensus.workspace = true

# ethereum
hanzo-evm-primitives-traits.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
hanzo-evm-ethereum-primitives.workspace = true
rand.workspace = true

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "hanzo-evm-chainspec/std",
    "hanzo-evm-consensus/std",
    "hanzo-evm-primitives-traits/std",
    "hanzo-evm-ethereum-primitives/std",
    "alloy-primitives/std",
]
