[package]
name = "hanzo-evm-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# evm
hanzo-evm-execution-types.workspace = true
hanzo-evm-primitives-traits.workspace = true

# ethereum
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# misc
auto_impl.workspace = true
thiserror.workspace = true

[features]
default = ["std"]
std = [
    "hanzo-evm-primitives-traits/std",
    "alloy-primitives/std",
    "alloy-consensus/std",
    "hanzo-evm-primitives-traits/std",
    "hanzo-evm-execution-types/std",
    "thiserror/std",
]
test-utils = [
    "hanzo-evm-primitives-traits/test-utils",
]
