[package]
name = "hanzo-evm-invalid-block-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# evm
revm.workspace = true
revm-bytecode.workspace = true
revm-database.workspace = true
hanzo-evm-engine-primitives.workspace = true
hanzo-evm-execution.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-provider.workspace = true
hanzo-evm-revm = { workspace = true, features = ["serde"] }
hanzo-evm-rpc-api = { workspace = true, features = ["client"] }
hanzo-evm-tracing.workspace = true
hanzo-evm-trie.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-consensus.workspace = true

# async
futures.workspace = true

# misc
eyre.workspace = true
jsonrpsee.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
hanzo-evm-chainspec.workspace = true
hanzo-evm-ethereum-primitives.workspace = true
hanzo-evm-eth-execution.workspace = true
hanzo-evm-provider = { workspace = true, features = ["test-utils"] }
hanzo-evm-revm = { workspace = true, features = ["test-utils"] }
hanzo-evm-testing-utils.workspace = true
tempfile.workspace = true
