[package]
name = "hanzo-evm-engine-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# evm
hanzo-evm-chainspec.workspace = true
hanzo-evm-engine-primitives = { workspace = true, features = ["std"] }
hanzo-evm-ethereum-engine-primitives.workspace = true
hanzo-evm-payload-builder.workspace = true
hanzo-evm-payload-primitives.workspace = true
hanzo-evm-primitives-traits.workspace = true
hanzo-evm-storage-api.workspace = true
hanzo-evm-transaction-pool.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom"] }
alloy-rpc-types-engine.workspace = true

# async
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# misc
eyre.workspace = true
tracing.workspace = true
op-alloy-rpc-types-engine = { workspace = true, optional = true }

[lints]
workspace = true

[features]
op = [
    "dep:op-alloy-rpc-types-engine",
    "hanzo-evm-payload-primitives/op",
    "hanzo-evm-primitives-traits/op",
]
